# tomcat-manager-cli

./: Cargo.toml  README.md
scripts/: deploy-and-wait.sh  expire-stale-sessions.sh  find-and-restart-stopped.sh  session-report.sh
src/: main.rs
